fixes signup and signin form alignment

--- a/app/assets/stylesheets/custom2.css
+++ b/app/assets/stylesheets/custom2.css
@@ -266,6 +266,7 @@ a:focus {
   width: 380px; }
 
 .span6 {
+  margin-left: 37%;
   width: 460px; }
 
 .span7 {
